# macro-attr-2018

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
ensure_no_std/: Cargo.toml
ensure_no_std/src/: main.rs
src/: lib.rs
tests/: empty_bi_derives.rs  enum.rs  enum_iterator.rs  enum_try_from.rs  items.rs  mac_attrs.rs  passthru_derive.rs  stable_encodable.rs  trailing_comma.rs  vis.rs
tests/derive-name-test/: Cargo.toml
