[package]
edition = "2021"
name = "macro-attr-2018"
version = "2.1.1"
rust-version = "1.60"
authors = ["warlock <internalmike@gmail.com>"]
description = "This crate provides the `macro_attr!` macro that enables the use of custom, macro-based attributes and derivations."
readme = "README.md"
documentation = "https://docs.rs/crate/macro-attr-2018/"
keywords = ["custom", "derive", "attribute", "macro"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/macro-attr-2018"

[build-dependencies]
rustc_version = "0.4.0"

[badges]
maintenance = { status = "passively-maintained" }
