[package]
edition = "2021"
name = "macro-attr-2018"
version = "3.0.1"
rust-version = "1.71"
authors = ["warlock <internalmike@gmail.com>"]
description = "This crate provides the `macro_attr!` macro that enables the use of custom, macro-based attributes and derivations."
readme = "README.md"
documentation = "https://docs.rs/crate/macro-attr-2018/"
keywords = ["custom", "derive", "attribute", "macro"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/macro-attr-2018"

[badges]
maintenance = { status = "passively-maintained" }
