[package]
name = "derive-name-test"
version = "0.1.0"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

[features]
std = []

[[bin]]
name = "derive-name-test"
path = "derive-name-test.rs"

[dependencies]
derive-name-macro = { version = "0.1.0", path = "../derive-name-macro" }
derive-name-proc = { version = "0.1.0", path = "../derive-name-proc", optional = true }

[dependencies.macro-attr-2018]
version = "0.4.0"
path = "../.."
default-features = false
